// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Angular Renderer | Layout Tests > Basic Text Rendering > should render multiline text correctly 1`] = `
" Line 1        
 Line 2        
 Line 3        
               
               
"
`;

exports[`Angular Renderer | Layout Tests > Basic Text Rendering > should render simple text correctly 1`] = `
"Hello World         
                    
                    
                    
                    
"
`;

exports[`Angular Renderer | Layout Tests > Basic Text Rendering > should render text with dynamic content 1`] = `
"Counter: 42         
                    
                    
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should auto-enable border when borderColor is set 1`] = `
"┌──────────────────┐     
│Colored Border    │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should auto-enable border when borderStyle is set 1`] = `
"┌──────────────────┐     
│With Border       │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should auto-enable border when focusedBorderColor is set 1`] = `
"┌──────────────────┐     
│Focused Border    │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should render absolute positioned boxes 1`] = `
"┌────────┐               
│Box 1   │               
└────────┘  ┌────────┐   
            │Box 2   │   
            └────────┘   
                         
                         
                         
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should render basic box layout correctly 1`] = `
"┌──────────────────┐     
│Inside Box        │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`Angular Renderer | Layout Tests > Box Layout Rendering > should render nested boxes correctly 1`] = `
"┌─Parent Box─────────────────┐     
│                            │     
│                            │     
│  ┌────────┐                │     
│  │Nested  │                │     
│  └────────┘                │     
│               Sibling      │     
│                            │     
│                            │     
└────────────────────────────┘     
                                   
                                   
"
`;

exports[`Angular Renderer | Layout Tests > Complex Layouts > should render complex nested layout correctly 1`] = `
"┌─Complex Layout───────────────────────┐     
│  ┌─────────────┐                     │     
│  │Header Sectio│                     │     
│  │Menu Item 1  │                     │     
│  │Menu Item 2  │                     │     
│  └─────────────┘                     │     
│                  ┌────────────────┐  │     
│                  │Content Area    │  │     
│                  │Some content her│  │     
│                  │More content    │  │     
│                  │Footer text     │  │     
│                  │                │  │     
│                  │                │  │     
│                  └────────────────┘  │     
│  Status: Ready                       │     
└──────────────────────────────────────┘     
                                             
                                             
"
`;

exports[`Angular Renderer | Layout Tests > Complex Layouts > should render scrollbox with sticky scroll and spacer 1`] = `
"┌─scroll area────────────────┐
│                            │
│┌─hi───────────────────────┐│
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
│└──────────────────────────┘│
│                            │
│                            │
└────────────────────────────┘
┌─spacer─────────────────────┐
│spacer                      │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
"
`;

exports[`Angular Renderer | Layout Tests > Complex Layouts > should render text with mixed styling and layout 1`] = `
"┌─────────────────────────────────┐     
│ERROR: Something went wrong      │     
│WARNING: Check your settings     │     
│SUCCESS: All systems operational │     
│                                 │     
│                                 │     
│                                 │     
└─────────────────────────────────┘     
                                        
                                        
"
`;

exports[`Angular Renderer | Layout Tests > Empty and Edge Cases > should handle component with no children 1`] = `
"               
               
               
               
               
               
               
               
"
`;

exports[`Angular Renderer | Layout Tests > Empty and Edge Cases > should handle empty component 1`] = `
"          
          
          
          
          
"
`;

exports[`Angular Renderer | Layout Tests > Empty and Edge Cases > should handle very small dimensions 1`] = `
"Hi   
     
     
"
`;
